Bug 1799354 - MutationRecord missing for Element.replaceChildren, r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D161548